test-resources.yaml
#Toto je ten test certifikátu, ktorý som vykonal pre overenie funkčnosti Cert-Manager-a. Test prebehol úspešne.
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
