heidisql.yaml
apiVersion: v1
kind: Service
metadata:
  name: heidisql-mysql-service
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
