ingress-node.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: myapp-ssl-prod
spec:
  tls:
    - hosts:
        - app.myumbapp.com
      secretName: tls-secret
  rules:
    - host: app.myumbapp.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: lockjs
                port:
                  number: 443
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 443
